2014-08-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pst_obj.c, t1_char.c: ANSI C function protos and definitions,
	i.e., FOO(void) instead of FOO().

2014-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tt_cmap.c (create_ToUnicode_cmap): Drop unused variables.

2014-08-04  Jiang Jiang  <gzjjgod@gmail.com>

	* cff.c (cff_get_glyphname): Remove duplicated cff_read_charsets()
	call.

	* tt_cmap.c (sfnt_get_glyphname, create_ToUnicode_cmap): Make sure
	we only do glyph name lookup for CFF fonts when they are not CID
	fonts.

	* cmap_read.c: Fix warnings when comparing size_t with negative
	value (< 0).

2014-08-03  Jiang Jiang  <gzjjgod@gmail.com>

	* tt_cmap.c (sfnt_get_glyphname, handle_subst_glyphs): Fix error on
	glyph name lookup.

	* cff.c (cff_glyph_lookup), pdfdev.c (pdf_dev_set_string): Correctly
	handles the dvi file when Unicode to CID mapping file is specified,
	where pdf_dev_set_string() got string of cids instead of glyphs.

	* cmap.c: Add reverse lookup from CID to Unicode codepoints.

	* tt_cmap.c, type0.c: Refactor create_ToUnicode_cmap{4, 12}(), use
	  reverse CMap lookup to construct ToUnicode streams.

2014-08-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfobj.c: Fix a typo in check_for_pdf().

2014-08-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Fix a bug in unicode encoding in CFF/OpenType fonts.

2014-08-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* type0.c: Fix a bug in Type0Font_clean (Type0Font *font).

2014-07-30  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c, dvicodes.h: Support TeX-XeT's begin_reflect and end_reclect
	opcodes in dvipdfmx.

	* dvi.c (dvi_set, do_glyph_array): Use dvi_right to ensure
	consistency.

2014-07-29  Khaled Hosny  <khaledhosny@eglug.org>

	* spc_pdfm.c: remove the #ifdef ENABLE_TOUNICODE as it is always true.
	* spc_pdfm.c: rename my_parse_pdf_dict to
	parse_pdf_dict_with_tounicode.

	* dvipdfmx.c, dvi.c: Always accept .xdv file extension.